HTTProute/HTTProute-for-addons/Argocd/HTTProute-argocd.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: argocd-route-https
  namespace: argocd
spec:
  hostnames:
   - "argocd.quan.click"
  parentRefs:
  - group: gateway.networking.k8s.io
    namespace: default
    kind: Gateway
    name: app-alb-gateway
    sectionName: https
  rules:
  - matches:
        - path:
            type: PathPrefix
            value: /

    backendRefs:
        - name: argocd-server 
          port: 80
